# EcoGridStoraniGonzalez

./: .gitignore  CMakeLists.txt  EcoGrid.cbp  EcoGrid.depend  EcoGrid.layout  UbuntuPasos.txt  ecogrid.db  ecogrid.db-journal  main.cpp  nodoBateria.h  nodoConsumidor.h  nodoProsumidor.h  nodoRed.h  orden.h  run.bat  transaccionEnergia.h
fuentes_oracle_test/: config.db  nuevo_main.cpp  nuevo_test.hpp
sql/: crear_esquema.sql  tabla.txt
src/: CSVParser.h  capaDatos.h  ecogrid.h  gridManager.h  main.cpp  nodoBateria.h  nodoConsumidor.h  nodoRed.h  orden.h  tp.db
src/util/: ConfigReader.h  config.ini
